# rust-v2

./: .tokeignore  Cargo.toml  LICENSE  README.md  batch_render.sh  build.rs  build.sh  error.sh  run.sh
.cargo/: config.toml
OLD_GARBAGE/: differential.rs  mod.rs  ray.rs  sphere.rs  vec.rs
OLD_GARBAGE/sdf/: mod.rs
images/bxdf-examples/: fresnel.exr  fresnel.ron  fresnel2.exr  lambertian.exr  lambertian.ron  orennayar.exr  orennayar.ron  specular-reflection-2.exr  specular-reflection-dielectric.exr  specular-reflection.exr  specular-reflection.ron  specular-transmission.exr  specular-transmission.ron
images/comparisons/: glass.ron  hero-1024.exr  hero-1024.ron  hero-4.exr  hero-4.ron  hero-64.exr  hero-64.ron  path-1024.exr  path-1024.ron  path-4.exr  path-4.ron  path-64.exr  path-64.ron  random-1024.exr  random-1024.ron  random-4.exr  random-4.ron  random-64.exr  random-64.ron  scene.ron
images/cornell/: 20000.exr  errors.json  hero.ron  path.ron  random.ron  scene.ron
images/direct-prism/: path.exr  scene.ron  spectral.exr  srgb.exr
images/dragon/: 20000.exr  errors.json  focus-20000.exr  focus-path-20000.exr  scene.ron  scene_512.ron  scene_focus.ron
images/errors/cornell/: hero.ron  random.ron
images/glass-sphere/: 20000.exr  scene.ron
images/lens/: lens.exr  scene.ron
images/prism/: prism.ron  sapphire-1_000_000.exr  scene.ron  srgb.ron
images/refracting-spheres/: 20000.exr  errors.json  focus-20000.exr  focus-path-20000.exr  hero-4.exr  hero.ron  path-20000.exr  random-4.exr  random.ron  scene.ron  scene_focus.ron
meshes/: .gitignore
old_trash/scenes/: bunny.ron  cornell.ron  dragon.ron  dummy.ron  mirror-sphere.ron  srgb-vs-spectrum.ron
res/scenes/: bunny.ron  cornell.ron  cornell.scene  dragon.ron  dummy.ron  glass.ron  mirror-sphere.ron  prism.ron  spheres.ron  srgb-vs-spectrum.ron  test.scene
src/: config.rs  lib.rs  renderer.rs  runtime.rs
src/bxdf/: bsdf.rs  fresnel.rs  lambertian.rs  mod.rs  oren_nayar.rs  specular.rs
src/bxdf/refraction/: air.rs  diesel.rs  glass.rs  mod.rs  sapphire.rs  water.rs
src/camera/: dummy.rs  mod.rs  orthographic.rs  perspective.rs
src/camera/sensor/: mod.rs  pixel.rs  tile.rs
src/color/: cie.rs  image_conv.rs  mod.rs  spectrum.rs  srgb.rs  xyz.rs
src/color/color_data/: mod.rs  spectral.rs  srgb.rs  xyz.rs
src/geometry/: aabb.rs  bubble.rs  disk.rs  mod.rs  plane.rs  point.rs  ray.rs  sphere.rs
src/geometry/bvh/: candidate.rs  item.rs  mod.rs  node.rs  plane.rs  side.rs
src/geometry/bvh_old/: item.rs  mod.rs  node.rs  plane.rs
src/geometry/mesh/: mod.rs  obj.rs
src/integrator/: dummy.rs  hero.rs  mod.rs  path.rs  spectral.rs  spectral_single.rs  whitted.rs
src/sampler/: camera.rs  float.rs  mod.rs  random.rs  spectral.rs
src/scene/: emitter.rs  mod.rs  object.rs  receiver.rs
src/scene/sampleable/: disk.rs  mod.rs  plane.rs  point.rs  sphere.rs
src/sensor/: mod.rs  pixel.rs  tile.rs
src/util/: floats.rs  math.rs  mc.rs  mod.rs  packet_impl.rs  threadpool.rs
