[package]
name = "rust-v2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde-big-array = "0.4.1"
typetag = "0.1.8"
ron = "0.7.1"
serde_json = "1.0.81"
bincode = "1.3.3"
lz4_flex = "0.9.3"

fastrand = "1.7.0"
bitflags = "1.3.2"
image = "0.24.2"
cgmath = { version = "0.18.0", features = ["serde"] }

crossbeam-channel = "0.5.5"
parking_lot = { version = "0.12.1", features = ["serde"] }
num_cpus = "1.13.1"
signal-hook = "0.3.14"

# show-image = { version = "0.10.0", features = ["image", "save"], optional = true }

log = "0.4.17"
env_logger = "0.9.0"

itertools = "0.10.3"

[features]
default = ["spectral"]
spectral = []
srgb = []
xyz = []
f64 = []
watertight-mesh = ["f64"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
incremental = true
debug = false
split-debuginfo = "off"
debug-assertions = false
