[package]
name = "rust-v2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde-big-array = "0.5.1"
typetag = "0.2.16"
ron = "0.8.1"
serde_json = "1.0.114"
bincode = "1.3.3"
lz4_flex = "0.11.2"

fastrand = "2.0.1"
bitflags = "2.4.2"
image = "0.24.9"
cgmath = { version = "0.18.0", features = ["serde"] }

crossbeam-channel = "0.5.12"
parking_lot = { version = "0.12.1", features = ["serde"] }
num_cpus = "1.16.0"
signal-hook = "0.3.17"

# show-image = { version = "0.10.0", features = ["image", "save"], optional = true }

log = "0.4.21"
env_logger = "0.11.2"

itertools = "0.12.1"

[features]
default = ["spectral"]
spectral = []
srgb = []
xyz = []
f64 = []
watertight-mesh = ["f64"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
incremental = true
debug = false
split-debuginfo = "off"
debug-assertions = false
